# robin

./: pyproject.toml  run.py
configs/: config.yaml  ethiopia.yaml  ethiopia_sweep.yaml  tune_demo.yaml  tune_ethiopia.yaml
demos/: evaluate.ipynb  pre-process.ipynb
src/: cli.py
src/robin/: __init__.py  cli.py
src/robin/dataloaders/: loader.py  z_loader.py
src/robin/encoders/: __init__.py  base.py  census_encoder.py  gmm_encoder.py  maps.py  table_datasets.py  table_encoder.py  utils.py  weight.py
src/robin/eval/: binning.py  correctness.py  creativity.py  density.py
src/robin/models/: cvae.py  cvae_components.py  vae.py  vae_components.py
src/robin/runners/: defaults.py  helpers.py  run.py  tune.py
tests/: test_binner.py  test_encode_categorical.py  test_encode_minmax.py  test_eval_correctness.py  test_eval_creativity.py  test_eval_density.py  test_gmm_encoder.py  test_table_encoder.py
